# logcolors

./: CMakeLists.txt  config.csv
examples/: config.csv  config2.csv
include/: ConfigReader.h  Renderer.h  SharedDataTypes.h
src/: ConfigReader.cpp  Renderer.cpp  SharedDataTypes.cpp  main.cpp
